tests/snapshots/tbir__agent_on_handler_dump_ir.snap
---
source: tests/tbir.rs
expression: "format!(\"{prog}\")"
---
tb-ir program
  testbench tb0 AgentOnHandlerTest_tb (synthetic) { dut: Top } component tagger=c0
  test AgentOnHandlerTest tb=tb0 run=fn1 check=- clock=clk@10000ps(SysDomain)
  component c0 Tagger (agent)
    field in_ev : out event<uint>
    field seen : uint<32> = 0
    field last : uint<8> = 0

fn fn0 comp_on_0 [kind=ComponentMethod(c0)]
  params:
    t : uint<8>
  locals:
    %0 t : uint<8>
  entry = b0

  b0:
    ComponentFieldWrite(self.seen, (self.seen + 1))
    ComponentFieldWrite(self.last, %t)
    -> Return

fn fn1 run_AgentOnHandlerTest [kind=Run, owner=tb0]
  locals:
    %0 i : unknown
    %1 waited : unknown
  entry = b0

  b0:
    DutWrite(dut.rst, 1)
    DutWrite(dut.en, 0)
    -> WaitCycles(2, b1)

  b1:
    DutWrite(dut.rst, 0)
    -> WaitCycles(1, b2)

  b2:
    Assign(%i, 0)
    -> Jump(b3)

  b3:
    -> Branch((%i <= 2), b4, b6)

  b4:
    ComponentEmit(tagger.in_ev, [(%i + 1)])
    -> WaitCycles(2, b7)

  b5:
    Assign(%i, (%i + 1))
    -> Jump(b3)

  b6:
    AssertCheck { cond: (tagger.seen == 3), on_fail: "expected 3 handled events, got %lld", tagger.seen }
    AssertCheck { cond: (tagger.last == 3), on_fail: "expected last payload 3, got %lld", tagger.last }
    Assign(%waited, 0)
    -> Jump(b8)

  b7:
    -> Jump(b5)

  b8:
    -> Branch((!tagger.idle_in(4) && (%waited < 100)), b9, b10)

  b9:
    -> WaitCycles(1, b11)

  b10:
    AssertCheck { cond: tagger.idle_in(4), on_fail: "agent never reported idle_in(4); waited=%lld", %waited }
    Log(info, "PASS: agent handled %lld events, idle_in(4) after %lld cycles", tagger.seen, %waited)
    -> Return

  b11:
    Assign(%waited, (%waited + 1))
    -> Jump(b8)
