tests/snapshots/tbir__agent_on_handler_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"agent_on_handler_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: AgentOnHandlerTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VTop.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct Tagger {
    std::vector<std::function<void(uint64_t)>> in_ev;
    uint64_t seen = 0;
    uint64_t last = 0;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VTop* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_AgentOnHandlerTest(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VTop;
    auto*& dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto*& tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "Top", "AgentOnHandlerTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    long long now_ps = 0;
    struct ClockState { const char* name; long long half_period_ps; long long next_edge_ps; int level; long long rising_count; };
    std::vector<ClockState> clocks_;
    clocks_.push_back(ClockState{"clk", 5000, 5000, 0, 0});
    dut->clk = 0;

    auto eval_clocks_until = [&](long long t_ps) {
        while (now_ps < t_ps) {
            long long next = t_ps;
            for (auto& c : clocks_) if (c.next_edge_ps < next) next = c.next_edge_ps;
            now_ps = next;
            bool _primary_rising = false;
            const char* _last_edge_clock = "";
            uint64_t _last_edge_cycle = 0;
            for (size_t i = 0; i < clocks_.size(); i++) {
                auto& c = clocks_[i];
                if (c.next_edge_ps == now_ps) {
                    c.level = !c.level;
                    if (i == 0) dut->clk = c.level;
                    c.next_edge_ps += c.half_period_ps;
                    if (c.level == 1) c.rising_count++;
                    _last_edge_clock = c.name;
                    _last_edge_cycle = (uint64_t)c.rising_count;
                    if (i == 0 && c.level == 1) { cycle_count++; _primary_rising = true; }
                }
            }
            dut->eval();
            _harc_trace_dump_at((uint64_t)now_ps, _last_edge_clock, _last_edge_cycle);
            if (_primary_rising) { for (auto& _svc : _post_eval_services) _svc(); if (!_post_eval_services.empty()) dut->eval(); }
            if (_primary_rising && !_post_eval_services.empty()) _harc_trace_dump_at((uint64_t)now_ps, _last_edge_clock, _last_edge_cycle);
        }
    };

    auto tick = [&]() {
        long long target = now_ps + clocks_[0].half_period_ps * 2;
        eval_clocks_until(target);
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    auto Tagger_on_h0 = [&](Tagger& self, uint64_t t) -> void {
        int __bb = 0;
        while (true) {
            switch (__bb) {
            case 0: {
                self.seen = (self.seen + 1);
                self.last = t;
                return;
                break;
            }
            default: return;
            }
        }
    };
    Tagger tagger;
    tagger.in_ev.push_back([&](auto _t) { tagger._last_in_cycle = (uint64_t)cycle_count; Tagger_on_h0(tagger, _t); });
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    _run_slot.thread = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        { // run_AgentOnHandlerTest (TB-IR loop-switch)
            uint64_t i = 0; (void)i;
            uint64_t waited = 0; (void)waited;
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst, 1);
                    harc_rt::harc_assign(dut->en, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 1;
                    break;
                }
                case 1: {
                    harc_rt::harc_assign(dut->rst, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 2;
                    break;
                }
                case 2: {
                    i = 0;
                    __bb = 3;
                    break;
                }
                case 3: {
                    if ((i <= 2)) { __bb = 4; } else { __bb = 6; }
                    break;
                }
                case 4: {
                    for (auto& _s : tagger.in_ev) _s((i + 1));
                    tagger._last_out_cycle = (uint64_t)cycle_count;
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 7;
                    break;
                }
                case 5: {
                    i = (i + 1);
                    __bb = 3;
                    break;
                }
                case 6: {
                    if (!((tagger.seen == 3))) {
                        sim_log_line("FAIL", "expected 3 handled events, got %lld", harc_rt::harc_printf_ll(tagger.seen));
                        ctx.errors++;
                    }
                    if (!((tagger.last == 3))) {
                        sim_log_line("FAIL", "expected last payload 3, got %lld", harc_rt::harc_printf_ll(tagger.last));
                        ctx.errors++;
                    }
                    waited = 0;
                    __bb = 8;
                    break;
                }
                case 7: {
                    __bb = 5;
                    break;
                }
                case 8: {
                    if ((!((((uint64_t)cycle_count - tagger._last_in_cycle) >= (uint64_t)(4))) && (waited < 100))) { __bb = 9; } else { __bb = 10; }
                    break;
                }
                case 9: {
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 11;
                    break;
                }
                case 10: {
                    if (!((((uint64_t)cycle_count - tagger._last_in_cycle) >= (uint64_t)(4)))) {
                        sim_log_line("FAIL", "agent never reported idle_in(4); waited=%lld", harc_rt::harc_printf_ll(waited));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: agent handled %lld events, idle_in(4) after %lld cycles", harc_rt::harc_printf_ll(tagger.seen), harc_rt::harc_printf_ll(waited));
                    __done = true;
                    break;
                }
                case 11: {
                    waited = (waited + 1);
                    __bb = 8;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    }(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    dut->eval();
    _harc_trace_dump_at((uint64_t)now_ps, "", 0);
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        long long _target = now_ps + clocks_[0].half_period_ps * 2;
        eval_clocks_until(_target);
        sched.tick();
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_AgentOnHandlerTest(argc, argv);
    if (std::strcmp(test_sel, "AgentOnHandlerTest") == 0) return run_AgentOnHandlerTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "AgentOnHandlerTest");
    return 1;
}
