tests/snapshots/tbir__analysis_env_connect_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"analysis_sink_connect_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: AnalysisSinkConnectTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VTop.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

struct AnalysisSource {
    std::vector<std::function<void(uint64_t)>> observed;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
    std::vector<std::function<void(uint64_t)>> _harc_hook_publish_pre;
    std::vector<std::function<void(uint64_t)>> _harc_hook_publish_post;
    void _harc_copy_user_state_from(const AnalysisSource& source) {
    }
    AnalysisSource() = default;
    AnalysisSource(const AnalysisSource& source) {
        _harc_copy_user_state_from(source);
    }
    AnalysisSource& operator=(const AnalysisSource& source) {
        if (this != &source) _harc_copy_user_state_from(source);
        return *this;
    }
};

struct AnalysisSb {
    uint64_t count = 0;
    uint64_t sum = 0;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
    std::vector<std::function<void(uint64_t)>> _harc_hook_write_obs_pre;
    std::vector<std::function<void(uint64_t)>> _harc_hook_write_obs_post;
    void _harc_copy_user_state_from(const AnalysisSb& source) {
        this->count = source.count;
        this->sum = source.sum;
    }
    AnalysisSb() = default;
    AnalysisSb(const AnalysisSb& source) {
        _harc_copy_user_state_from(source);
    }
    AnalysisSb& operator=(const AnalysisSb& source) {
        if (this != &source) _harc_copy_user_state_from(source);
        return *this;
    }
};

struct AnalysisCovCollector {
    uint64_t samples = 0;
    uint64_t sum = 0;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
    std::vector<std::function<void(uint64_t)>> _harc_hook_sample_obs_pre;
    std::vector<std::function<void(uint64_t)>> _harc_hook_sample_obs_post;
    void _harc_copy_user_state_from(const AnalysisCovCollector& source) {
        this->samples = source.samples;
        this->sum = source.sum;
    }
    AnalysisCovCollector() = default;
    AnalysisCovCollector(const AnalysisCovCollector& source) {
        _harc_copy_user_state_from(source);
    }
    AnalysisCovCollector& operator=(const AnalysisCovCollector& source) {
        if (this != &source) _harc_copy_user_state_from(source);
        return *this;
    }
};

struct AnalysisEnv {
    AnalysisSource source;
    AnalysisSb sb;
    AnalysisCovCollector cov;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
    void _harc_copy_user_state_from(const AnalysisEnv& source) {
        this->source._harc_copy_user_state_from(source.source);
        this->sb._harc_copy_user_state_from(source.sb);
        this->cov._harc_copy_user_state_from(source.cov);
    }
    AnalysisEnv() = default;
    AnalysisEnv(const AnalysisEnv& source) {
        _harc_copy_user_state_from(source);
    }
    AnalysisEnv& operator=(const AnalysisEnv& source) {
        if (this != &source) _harc_copy_user_state_from(source);
        return *this;
    }
};

struct HarcTestContext {
    VerilatedContext verilated;
    VTop* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    harc_rt::random::HarcRng rng;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_AnalysisSinkConnectTest(int argc, char** argv) {
    HarcTestContext ctx;
    ctx.verilated.commandArgs(argc, argv);
    ctx.dut = harc_rt::log::harc_make_dut<VTop>(&ctx.verilated);
    auto* dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto* tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& harc_rng = ctx.rng;
    auto harc_rng_next = [&]() { return harc_rng.next(); };
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "Top", "AnalysisSinkConnectTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    long long now_ps = 0;
    auto eval_clocks_until = [&](long long t_ps) {
        if (t_ps <= now_ps) return;
        now_ps = t_ps;
        dut->eval();
        _harc_trace_dump_at((uint64_t)now_ps, "", (uint64_t)cycle_count);
        if (_trace_time <= (uint64_t)now_ps) _trace_time = (uint64_t)now_ps + 1;
    };

    auto tick = [&]() {
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        now_ps = (long long)_trace_time;
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        now_ps = (long long)_trace_time;
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) { _harc_trace_dump_next("clk", (uint64_t)cycle_count); now_ps = (long long)_trace_time; }
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    // Route an empty-queue pop through the sim's own FATAL path instead
    // of the runtime header's abort backstop: the run records the
    // failure, unwinds normally, and still writes its log and trace.
    // `_fatal` is a loop-exit condition, so the run stops at the next
    // scheduler tick — same semantics as `log(fatal, ...)`. Emitted
    // verbatim by both codegens so the two traces stay diffable.
    harc_rt::HarcQueueFatalScope _queue_fatal_scope([&]() {
        sim_log_line("FATAL", "queue front/pop on an empty queue -- guard it with .empty()/.size(), or wait until the producer has pushed");
        ctx.errors++;
        _fatal = true;
    });

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    AnalysisEnv env;
    auto AnalysisSource_publish = [&](AnalysisSource& self, uint64_t v) -> void {
        int __bb = 0;
        while (true) {
            switch (__bb) {
            case 0: {
                for (auto& _s : self.observed) _s(v);
                self._last_out_cycle = (uint64_t)cycle_count;
                return;
                break;
            }
            default: return;
            }
        }
    };
    auto AnalysisSb_write_obs = [&](AnalysisSb& self, uint64_t v) -> void {
        int __bb = 0;
        while (true) {
            switch (__bb) {
            case 0: {
                self.count = (self.count + 1);
                self.sum = (self.sum + v);
                return;
                break;
            }
            default: return;
            }
        }
    };
    auto AnalysisCovCollector_sample_obs = [&](AnalysisCovCollector& self, uint64_t v) -> void {
        int __bb = 0;
        while (true) {
            switch (__bb) {
            case 0: {
                self.samples = (self.samples + 1);
                self.sum = (self.sum + v);
                return;
                break;
            }
            default: return;
            }
        }
    };
    env.source.observed.push_back([&](auto _t) { AnalysisSb_write_obs(env.sb, _t); });
    env.source.observed.push_back([&](auto _t) { AnalysisCovCollector_sample_obs(env.cov, _t); });
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    auto _run_slot_lambda = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        { // run_AnalysisSinkConnectTest (TB-IR loop-switch)
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    AnalysisSource_publish(env.source, 3);
                    AnalysisSource_publish(env.source, 5);
                    if (!((env.sb.count == 2))) {
                        sim_log_line("FAIL", "scoreboard count=%lld", harc_rt::harc_printf_ll(env.sb.count));
                        ctx.errors++;
                    }
                    if (!((env.sb.sum == 8))) {
                        sim_log_line("FAIL", "scoreboard sum=%lld", harc_rt::harc_printf_ll(env.sb.sum));
                        ctx.errors++;
                    }
                    if (!((env.cov.samples == 2))) {
                        sim_log_line("FAIL", "coverage samples=%lld", harc_rt::harc_printf_ll(env.cov.samples));
                        ctx.errors++;
                    }
                    if (!((env.cov.sum == 8))) {
                        sim_log_line("FAIL", "coverage sum=%lld", harc_rt::harc_printf_ll(env.cov.sum));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: analysis event connected to scoreboard and coverage-style sinks");
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    };
    _run_slot.thread = _run_slot_lambda(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    _harc_eval_negedge(dut);
    _harc_trace_dump_next("clk", (uint64_t)cycle_count);
    now_ps = (long long)_trace_time;
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        now_ps = (long long)_trace_time;
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) { _harc_trace_dump_next("clk", (uint64_t)cycle_count); now_ps = (long long)_trace_time; }
        sched.tick();
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        now_ps = (long long)_trace_time;
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    _auto_cov_reports.clear();
    _post_eval_services.clear();
    _checkers.clear();
    harc_rt::harc_destroy_scheduler_threads(sched);
    dut->final();
    HARC_RT_WRITE_COVERAGE(ctx.verilated.coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_AnalysisSinkConnectTest(argc, argv);
    if (std::strcmp(test_sel, "AnalysisSinkConnectTest") == 0) return run_AnalysisSinkConnectTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "AnalysisSinkConnectTest");
    return 1;
}
