tests/snapshots/tbir__axilite_seqdrv_unsupported.snap
---
source: tests/tbir.rs
expression: msg
---
TB-IR lowering does not support transactor `SeqXactor` state field `last_read` yet (only one module-typed (DUT handle) field is lowered); re-run with `--codegen v1`
